undo of main pull