@@ -18,10 +18,11 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Collections;
+import java.util.HashSet;
+import java.util.Locale;
 import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
-import java.util.TreeSet;
 import java.util.concurrent.Executor;
 
 /**
@@ -44,15 +45,7 @@ public class JdkHttpClientBuilder {
     static final Set<String> DEFAULT_RESTRICTED_HEADERS;
 
     static {
-        TreeSet<String> treeSet = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
-        treeSet.addAll(Set.of(
-            "connection",
-            "content-length",
-            "expect",
-            "host",
-            "upgrade"
-        ));
-        DEFAULT_RESTRICTED_HEADERS = Collections.unmodifiableSet(treeSet);
+        DEFAULT_RESTRICTED_HEADERS = Set.of("connection", "content-length", "expect", "host", "upgrade");
     }
 
     private static final ClientLogger LOGGER = new ClientLogger(JdkHttpClientBuilder.class);
@@ -164,9 +157,8 @@ public class JdkHttpClientBuilder {
      * @return a {@link HttpClient}.
      */
     public HttpClient build() {
-        java.net.http.HttpClient.Builder httpClientBuilder = this.httpClientBuilder == null
-            ? java.net.http.HttpClient.newBuilder()
-            : this.httpClientBuilder;
+        java.net.http.HttpClient.Builder httpClientBuilder
+            = this.httpClientBuilder == null ? java.net.http.HttpClient.newBuilder() : this.httpClientBuilder;
 
         // Azure JDK http client supports HTTP 1.1 by default.
         httpClientBuilder.version(java.net.http.HttpClient.Version.HTTP_1_1);
@@ -175,28 +167,24 @@ public class JdkHttpClientBuilder {
             ? httpClientBuilder.connectTimeout(this.connectionTimeout)
             : httpClientBuilder.connectTimeout(DEFAULT_CONNECT_TIMEOUT);
 
-        Configuration buildConfiguration = (configuration == null)
-            ? Configuration.getGlobalConfiguration()
-            : configuration;
+        Configuration buildConfiguration
+            = (configuration == null) ? Configuration.getGlobalConfiguration() : configuration;
 
-        ProxyOptions buildProxyOptions = (proxyOptions == null)
-            ? ProxyOptions.fromConfiguration(buildConfiguration)
-            : proxyOptions;
+        ProxyOptions buildProxyOptions
+            = (proxyOptions == null) ? ProxyOptions.fromConfiguration(buildConfiguration) : proxyOptions;
 
         if (executor != null) {
             httpClientBuilder.executor(executor);
         }
 
         if (buildProxyOptions != null) {
-            httpClientBuilder = httpClientBuilder.proxy(new JdkHttpClientProxySelector(
-                buildProxyOptions.getType().toProxyType(),
-                buildProxyOptions.getAddress(),
-                buildProxyOptions.getNonProxyHosts()));
+            httpClientBuilder
+                = httpClientBuilder.proxy(new JdkHttpClientProxySelector(buildProxyOptions.getType().toProxyType(),
+                    buildProxyOptions.getAddress(), buildProxyOptions.getNonProxyHosts()));
 
             if (buildProxyOptions.getUsername() != null) {
-                httpClientBuilder
-                    .authenticator(new ProxyAuthenticator(buildProxyOptions.getUsername(),
-                        buildProxyOptions.getPassword()));
+                httpClientBuilder.authenticator(
+                    new ProxyAuthenticator(buildProxyOptions.getUsername(), buildProxyOptions.getPassword()));
             }
         }
         return new JdkHttpClient(httpClientBuilder.build(), Collections.unmodifiableSet(getRestrictedHeaders()));
@@ -204,37 +192,29 @@ public class JdkHttpClientBuilder {
 
     Set<String> getRestrictedHeaders() {
         // Compute the effective restricted headers by removing the allowed headers from default restricted headers
-        Set<String> allowRestrictedHeaders = getAllowRestrictedHeaders();
-        Set<String> restrictedHeaders = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
-        restrictedHeaders.addAll(DEFAULT_RESTRICTED_HEADERS);
-        restrictedHeaders.removeAll(allowRestrictedHeaders);
+        Set<String> restrictedHeaders = new HashSet<>(DEFAULT_RESTRICTED_HEADERS);
+        removeAllowedHeaders(restrictedHeaders);
         return restrictedHeaders;
     }
 
-    private Set<String> getAllowRestrictedHeaders() {
+    private void removeAllowedHeaders(Set<String> restrictedHeaders) {
         Properties properties = getNetworkProperties();
-        String[] allowRestrictedHeadersNetProperties =
-            properties.getProperty(JDK_HTTPCLIENT_ALLOW_RESTRICTED_HEADERS, "").split(",");
+        String[] allowRestrictedHeadersNetProperties
+            = properties.getProperty(JDK_HTTPCLIENT_ALLOW_RESTRICTED_HEADERS, "").split(",");
 
         // Read all allowed restricted headers from configuration
-        Configuration config = (this.configuration == null)
-            ? Configuration.getGlobalConfiguration()
-            : configuration;
-        String[] allowRestrictedHeadersSystemProperties = config.get(JDK_HTTPCLIENT_ALLOW_RESTRICTED_HEADERS, "")
-            .split(",");
-
-        Set<String> allowRestrictedHeaders = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
+        Configuration config = (this.configuration == null) ? Configuration.getGlobalConfiguration() : configuration;
+        String[] allowRestrictedHeadersSystemProperties
+            = config.get(JDK_HTTPCLIENT_ALLOW_RESTRICTED_HEADERS, "").split(",");
 
         // Combine the set of all allowed restricted headers from both sources
         for (String header : allowRestrictedHeadersSystemProperties) {
-            allowRestrictedHeaders.add(header.trim());
+            restrictedHeaders.remove(header.trim().toLowerCase(Locale.ROOT));
         }
 
         for (String header : allowRestrictedHeadersNetProperties) {
-            allowRestrictedHeaders.add(header.trim());
+            restrictedHeaders.remove(header.trim().toLowerCase(Locale.ROOT));
         }
-
-        return allowRestrictedHeaders;
     }
 
     Properties getNetworkProperties() {
